tests/NormalTests/paczka1/small_fuzzy/97494063.err
Error in line 3: mOX3GXbrd A558 20,1
Error in line 4: mOX3GXbrd S438 10,1
Error in line 5: 2A6qqmcO S438 27,8
Error in line 11: mOX3GXbrd S980 90,6
